<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GraphFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph1"
            android:layout_width="match_parent"
            android:layout_height="200dip" />

        <TextView
            android:id="@+id/exercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exc"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/running"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/run"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/walking"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/walk"
                    android:textSize="18sp" />
            </RadioGroup>

        </LinearLayout>

        <Spinner
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wgt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/weightEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:background="@drawable/button_background_garnet"
            android:text="@string/sub"
            android:textColor="@android:color/white" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph2"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_weight="1" />
    </LinearLayout>
</ScrollView>
